# django_cityloc_pkg_bstodd22

./: setup.cfg  setup.py
.github/workflows/: publish_pkg.yaml
docs/: conf.py  index.rst
